Make sure article list always stretches enough for mission statement even if list is empty

--- a/pskb_website/static/css/base.css
+++ b/pskb_website/static/css/base.css
@@ -330,6 +330,7 @@ a:hover.emphasize-dark  {
     /* Create overlap effect with padding-bottom on featured */
     margin-top: -170px;
     padding: 15px;
+    min-height: 250px;
 }
 
 #article-list .nav > li {
